kubernetes-manifests/retail-store-sample-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store-sample-app
  labels:
    demo: roadshow
    repo: demo-apps
