kubernetes-manifests/retail-store-sample-app/deployment-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: retail-store-sample-app
  labels:
    app: cart
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: cart
          image: public.ecr.aws/aws-containers/retail-store-sample-cart:1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "100m"
