kubernetes-manifests/retail-store-sample-app/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: retail-store-sample-app
  labels:
    app: ui
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: ui
          image: public.ecr.aws/aws-containers/retail-store-sample-ui:1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
