kubernetes-manifests/retail-store-sample-app/service-cart.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: retail-store-sample-app
  labels:
    app: cart
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
