kubernetes-manifests/retail-store-sample-app/service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail-store-sample-app
  labels:
    app: catalog
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
