kubernetes-manifests/retail-store-sample-app/service-checkout.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: retail-store-sample-app
  labels:
    app: checkout
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: checkout
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
