kubernetes-manifests/retail-store-sample-app/service-orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-store-sample-app
  labels:
    app: orders
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
