kubernetes-manifests/retail-store-sample-app/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-store-sample-app
  labels:
    app: ui
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
