kubernetes-manifests/retail-store-sample-app/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui
  namespace: retail-store-sample-app
  labels:
    app: ui
    demo: roadshow
    repo: demo-apps
spec:
  to:
    kind: Service
    name: ui
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
